# jni

./: AntigravityConfig.h  CMakeLists.txt  readme install.txt
CommonLibrary/: CMakeLists.txt  CommonLibrary.cpp  CommonLibrary.h
CommonLibrary/Gui/: Buttons.cpp  Buttons.h  Image.cpp  Image.h  Overlay.cpp  Overlay.h
CommonLibrary/Shaders/: BumpShader.cpp  BumpShader.h  CelShader.cpp  CelShader.h  Cleanable.h  CubemapReflectionShader.cpp  CubemapReflectionShader.h  DeferredShader.cpp  DeferredShader.h  DiffuseShader.cpp  DiffuseShader.h  DiscoBallShader.cpp  DiscoBallShader.h  ExplosionWaveShader.cpp  ExplosionWaveShader.h  FireShader.cpp  FireShader.h  FlameThrowerShader.cpp  FlameThrowerShader.h  FullScreenEffectShader.cpp  FullScreenEffectShader.h  GLSLProgram.cpp  GLSLProgram.h  GhostShader.cpp  GhostShader.h  GlassShader.cpp  GlassShader.h  GodrayShader.cpp  GodrayShader.h  GrassShader.cpp  GrassShader.h  InstancingShader.cpp  InstancingShader.h  LaserShader.cpp  LaserShader.h  MorphShader.cpp  MorphShader.h  OceanShader.cpp  OceanShader.h  ParticleShader.cpp  (+27 more)
CommonLibrary/include/: AABB.h  AnimatedMesh.h~  Animation.h  BitmapFont.h  Bones.h  Bones.h~  Camera.h  CommonLibraryConfig.h.in~  Cursor.h  CustomResource.h  DepthReader.h  FramebufferObject.h  GLText.h  GameState.h  GenericController.h  Heightmap.h  JavaStuff.h  Level.h  Material.h  MaterialDrawPass.h  Mesh.h  MeshAnimation.h  MeshAnimation.h~  Model.h  OBJLoader.h  Object3D.h  OpenGLModel.h  Particles.h  Plane.h  Plane.h~  Quaternion.h  Quaternion.h~  RayPicking.h  Renderer.h  Shader.h~  ShadowMapping.h  Skybox.h  Sound.h  StaticMesh.h~  TCPIP.h  (+12 more)
CommonLibrary/include/.svn/: entries
CommonLibrary/include/.svn/text-base/: AnimatedMesh.h.svn-base  Cleanable.h.svn-base  FramebufferObject.h.svn-base  GLSLProgram.h.svn-base  Mesh.h.svn-base  MeshAnimation.h.svn-base  Plane.h.svn-base  Quaternion.h.svn-base  Shader.h.svn-base  ShaderList.h.svn-base  Skybox.h.svn-base  StaticMesh.h.svn-base  TextureGL.h.svn-base  TextureManager.h.svn-base  Uniform.h.svn-base  fichiers.h.svn-base  macros.h.svn-base  tga.h.svn-base
CommonLibrary/src/: AABB.cpp  AnimatedMesh.cpp~  Animation.cpp  BitmapFont.cpp  Bones.cpp  Bones.cpp~  Camera.cpp  Cursor.cpp  CustomResource.cpp  DepthReader.cpp  FramebufferObject.cpp  FramebufferObject.cpp~  GLText.cpp  GameState.cpp  GenericController.cpp  Heightmap.cpp  JavaStuff.cpp  Level.cpp  Material.cpp  Mesh.cpp  MeshAnimation.cpp  MeshAnimation.cpp~  Model.cpp  ModelImport.cpp  OBJLoader.cpp  Object3D.cpp  OpenGLModel.cpp  Particles.cpp  Plane.cpp  Quaternion.cpp  RayPicking.cpp  Renderer.cpp  Shader.cpp~  ShaderList.cpp~  ShadowMapping.cpp  Skybox.cpp  Skybox.cpp~  Sound.cpp  StaticMesh.cpp~  TCPIP.cpp  (+14 more)
CommonLibrary/src/.svn/: entries
CommonLibrary/src/.svn/text-base/: AnimatedMesh.cpp.svn-base  Bones.cpp.svn-base  FramebufferObject.cpp.svn-base  GLSLProgram.cpp.svn-base  Mesh.cpp.svn-base  MeshAnimation.cpp.svn-base  Plane.cpp.svn-base  Quaternion.cpp.svn-base  Shader.cpp.svn-base  ShaderList.cpp.svn-base  Skybox.cpp.svn-base  StaticMesh.cpp.svn-base  TextureGL.cpp.svn-base  TextureManager.cpp.svn-base  Uniform.cpp.svn-base  fichiers.cpp.svn-base  tga.cpp.svn-base
SceneEditor/: BuddhaGlass.cpp  BuddhaGlass.h  BuddhaScene.cpp  BuddhaScene.h  CMakeLists.txt  CustomQColorWidget.cpp  CustomQColorWidget.h  DeferredRenderingScene.cpp  DeferredRenderingScene.h  DwarfScene.cpp  DwarfScene.h  GLWidget.cpp  GLWidget.h  GodraysScene.cpp  GodraysScene.h  GrassScene.cpp  GrassScene.h  HairAnimation.cpp  HairAnimation.h  InstancingScene.cpp  InstancingScene.h  OceanScene.cpp  OceanScene.h  PyroclasticNoiseScene.cpp  PyroclasticNoiseScene.h  QTweakable.cpp  QTweakable.h  Scene.cpp  Scene.h  SceneEditorWidget.cpp  SceneEditorWidget.h  SceneManager.cpp  SceneManager.h  ShaderEditorScene.cpp  ShaderEditorScene.h  ShaderEditorWidget.cpp  ShaderEditorWidget.h  SimplexNoise.cpp  SimplexTextures.cpp  SimplexTextures.h  (+13 more)
shaders/: BlenderShader.ps~  BlenderShader.vs~  BumpShader.ps  BumpShader.ps~  BumpShader.vs  BumpShader.vs~  BumpSpecularMapShader.ps~  CelShader.ps  CelShader.ps~  CelShader.vs  CubemapReflectionShader.ps  CubemapReflectionShader.ps~  CubemapReflectionShader.vs  CubemapReflectionShader.vs~  DeferredShader.ps  DeferredShader.vs  DeferredShaderFullScreen.ps  DeferredShaderFullScreen.vs  DiffuseShader.ps~  DiffuseShader.vs  DiffuseShader.vs~  DiffuseShadowShader.ps~  DiffuseShadowShader.vs~  DiscoBallShader.ps~  DiscoBallShader.vs~  ExplosionWaveShader.ps  ExplosionWaveShader.ps~  ExplosionWaveShader.vs  ExplosionWaveShader.vs~  FireShader.ps~  FireShader.vs~  FlameThrower.ps~  FlameThrower.vs~  GaussianBlurShader.ps  GaussianBlurShader.ps~  GhostShader.ps~  GhostShader.vs~  GlassShader.ps  GlassShader.vs  GodrayShader.ps  (+98 more)
shaders/.svn/: entries
shaders/.svn/text-base/: lightstaticMeshShader.ps.svn-base  lightstaticMeshShader.vs.svn-base  tesselationShader.gs.svn-base  tesselationShader.ps.svn-base  tesselationShader.tc.svn-base  tesselationShader.te.svn-base  tesselationShader.vs.svn-base
testqt/: CMakeLists.txt  designerUniformWidget.ui  main.cpp
